# lull

./: .gitignore  .pre-commit-config.yaml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  codex-review.yml  deploy-api.yml  eas-update.yml
apps/api/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1551d5331491_initial_data_model.py  170c780f18d6_guest_credits.py  6a5df6012d49_initial_data_model.py
apps/api/db-init/: 01-test-dbs.sql
apps/api/deploy/: lull.dev.frankbria.net.conf
apps/api/scripts/: dev-tls.sh
apps/api/src/lull_api/: audio.py  auth.py  config.py  db.py  entitlements.py  main.py  models.py  moderation.py  oauth.py  persistence.py  personas.py  pii.py  scripts.py  security.py
apps/api/tests/: conftest.py  test_auth.py  test_cache_eviction.py  test_claude_source.py  test_config.py  test_cors.py  test_dev_tls_helper.py  test_elevenlabs.py  test_entitlements.py  test_generate.py  test_guest.py  test_migrations.py  test_models.py  test_oauth.py  test_persistence.py  test_safety.py  test_script_rate_limit.py  test_security.py  test_voices.py
apps/mobile/: .env.example  App.tsx  app.json  eas.json  eslint.config.js  jest.setup.js  metro.config.js  package.json
apps/mobile/src/: CategorySection.tsx  HypnosisToggle.tsx  (+11 more)
docs/: ARCHITECTURE.md  NAMING.md  PRD.md  ROADMAP.md  app-store-policy-stance.md  elevenlabs-commercial-tos.md
tasks/: lessons.md  todo.md
(+6 files in other folders)
